# Caffe-TicTacToe

./: CMakeLists.txt  README.md  model.prototxt  settings.txt  solver.prototxt
src/: tictactoe.h  tictactoe_experiment.cpp  tictactoe_experiment.h  tictactoe_game.cpp  tictactoe_game.h  tictactoe_general.cpp  tictactoe_generation.cpp  tictactoe_menu_main.cpp  tictactoe_menu_settings.cpp  tictactoe_menus.h  tictactoe_play.cpp  tictactoe_train.cpp
